[project]
name = "python-downloader"
version = "0.1.0"
description = "A simple but pretty Python-based multi-URL file downloader"
readme = "README.md"
authors = [
    { name = "Daniel Fox", email = "<danudey@me.com>"}
]
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "browser-cookie3>=0.20.1",
    "requests>=2.32.3",
    "rich>=14.0.0",
]
classifiers = [
    "Typing :: Typed",
    "Environment :: Console",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
download = "pydownloader.downloader:main"